# int128

./: .gitignore  API_INT128_BASE_ALGORITHM.md  API_INT128_BASE_BITS.md  API_INT128_BASE_CMATH.md  API_INT128_BASE_CONCEPTS.md  API_INT128_BASE_FORMAT.md  API_INT128_BASE_IOSTREAMS.md  API_INT128_BASE_LIMITS.md  API_INT128_BASE_NUMERIC.md  API_INT128_BASE_T.md  API_INT128_BASE_TRAITS.md  API_INT128_BASE_TT.md  BENCHMARK_INT128_VS_UINT128.md  BOOST_COMPARISON_ANALYSIS.md  BOOST_COMPARISON_QUICKSTART.md  CHANGELOG.md  CI_CD_FIXES_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CODE_RULES_APPLIED.md  COMPARISON_BOOST_FEATURE_SUMMARY.md  COMPARISON_INT128BASE_VS_UINT128ORIGINAL.md  COMPARISON_ORIGINAL_VS_UNIFIED.md  COMPILER_ARGUMENT_GUIDE.md  COMPILER_REQUIREMENTS.md  CONCEPTS_MIGRATION_SUMMARY.md  CONSTEXPR_OPERATIONS_ARCHITECTURE.md  CONSTEXPR_OPERATIONS_MODULAR_SUMMARY.md  CONVERSIONS_BYTES_BITSET.md  DEMOS_CATALOG.md  DEVELOPMENT_WORKFLOW.md  DEV_ENV_VARS.md  DOCUMENTATION_GRAPH.md  Directory.Build.props  Doxyfile  ENCAPSULATION_DIV128_64_COMPOSED.md  EXPERIMENTAL_PROJECTS.md  EXPRESSION_TEMPLATES_GUIDE.md  FASE_19_INCR_DECR_COMPLETO.md  FEATURE_T_CONFORMANCE_REPORT.md  (+184 more)
.github/: copilot-instructions.md
CI_CD_Results/: 0_CI Summary.txt  0_Generate Benchmark Report.txt  10_Clang 18 - debug.txt  10_Clang 18 - release.txt  10_Clang 19 - release.txt  10_GCC 13 - debug.txt  10_GCC 13 - release.txt  10_GCC 14 - debug.txt  10_GCC 14 - release.txt  10_MSVC - debug.txt  10_MSVC - release.txt  10_Sanitizers (ASan + UBSan).txt  11_Clang 18 - debug.txt  11_Clang 18 - release.txt  11_Clang 19 - debug.txt  11_Clang 19 - release.txt  11_Code Quality Checks.txt  11_GCC 13 - debug.txt  11_GCC 14 - release.txt  11_MSVC - release.txt  11_Sanitizers (ASan + UBSan).txt  12_Clang 18 - release.txt  12_Clang 19 - debug.txt  12_Clang 19 - release.txt  12_Code Quality Checks.txt  12_GCC 13 - debug.txt  12_GCC 13 - release.txt  12_GCC 14 - release.txt  12_MSVC - debug.txt  12_MSVC - release.txt  12_Sanitizers (ASan + UBSan).txt  13_Code Quality Checks.txt  13_GCC 13 - debug.txt  13_GCC 14 - debug.txt  13_GCC 14 - release.txt  13_MSVC - debug.txt  13_MSVC - release.txt  13_Sanitizers (ASan + UBSan).txt  14_Code Quality Checks.txt  14_GCC 13 - debug.txt  (+83 more)
bench_results/: summary.txt
benchmark_results/: benchmark_msvc.csv  benchmark_output_msvc.txt  uint128_benchmarks_GCC_15_2.csv  (+1 more)
tests/: CMakeLists.txt  README.md  advanced_string_test.cpp  algorithm_extracted_tests.cpp  basic_test.cpp  basic_traits_test.cpp  benchmark_test.cpp  check_max.cpp  complete_iota_test.cpp  debug_clang.cpp  debug_signed_div.cpp  debug_string.cpp  final_traits_test.cpp  hello_clang.cpp  hello_libc.cpp  int128_algorithm_extracted_tests.cpp  int128_base_t_extracted_tests.cpp  int128_base_tt_extracted_tests.cpp  int128_bits_extracted_tests.cpp  int128_bits_tests.cpp  int128_cmath_extracted_tests.cpp  int128_concepts_extracted_tests.cpp  int128_extracted_tests.cpp  int128_format_extracted_tests.cpp  int128_format_tests.cpp  int128_iostreams_extracted_tests.cpp  int128_limits_extracted_tests.cpp  int128_numeric_extracted_tests.cpp  int128_ranges_extracted_tests.cpp  int128_safe_extracted_tests.cpp  int128_t_extracted_tests.cpp  int128_thread_safety_extracted_tests.cpp  int128_thread_safety_tests.cpp  int128_traits_extracted_tests.cpp  iota_test.cpp  minimal_traits_test.cpp  normalized_benchmark.cpp  phase15_int128_tests.cpp  phase15_uint128_tests.cpp  practical_literals_test.cpp  (+90 more)
tests/systematic/: test_divrem_systematic.cpp
(+782 files in other folders)
